# vmemcache

./: .gitignore  CMakeLists.txt  ChangeLog  FindVALGRIND.cmake  Findvalgrind.cmake  LICENSE  README.md  codecov.yml  config.h.in  index.html  libvmemcache.map  libvmemcache.pc.in  main.c  packages.cmake
_layouts/: manual.html
benchmarks/: CMakeLists.txt  bench_micro.c  bench_simul.c  benchmark_time.c  benchmark_time.h  rand.c  rand.h
benchmarks/tools/: .gitignore  benchconfig.py.example  latency_plot.py  latency_run.py
doc/: CMakeLists.txt  vmemcache.md
manpages/master/: vmemcache.3.md
src/: CMakeLists.txt  common.h  critnib.c  critnib.h  fast-hash.c  fast-hash.h  file.c  file.h  file_posix.c  libvmemcache.c  libvmemcache.h  libvmemcache.map  main.c  main.h  metrohash.c  metrohash.h  mmap.c  mmap.h  mmap_posix.c  os.h  os_posix.c  os_thread.h  os_thread_posix.c  out.c  out.h  ringbuf.c  ringbuf.h  sys_util.h  util.c  util.h  util_posix.c  valgrind_internal.h  vec.h  vmemcache.c  vmemcache.h  vmemcache_common.h  vmemcache_heap.c  vmemcache_heap.h  vmemcache_index.c  vmemcache_index.h  (+2 more)
src/sys/: queue.h
tests/: CMakeLists.txt  example.c  example.cmake  helpers.cmake  test-basic-valgrind.cmake  test-basic.cmake  test-bench-mt.cmake  test-bench-simul.cmake  test-example.cmake  test-fragmentation.cmake  test-heap-usage.cmake  test-mt.cmake  test-twolevel.cmake  test-utilization.cmake  test.c  test.h  test_helpers.h  twolevel.c  valgrind-leak-check.sh  valgrind.supp  vmemcache_basic.c  vmemcache_fragmentation.c  vmemcache_fragmentation.h  vmemcache_test_basic.c  vmemcache_test_heap_usage.c  vmemcache_test_mt.c  vmemcache_test_utilization.c  vmemcache_tests.h
utils/: check_whitespace
utils/check_license/: check-headers.sh  file-exceptions.sh
utils/docker/: build.sh  pull-or-rebuild-image.sh  run-build.sh
utils/docker/images/: Dockerfile.fedora-28  Dockerfile.ubuntu-18.04  build-image.sh  push-image.sh
utils/md2man/: default.man  md2man.sh
